UI: simplify repo creation when default ns exists

--- a/webui/src/styles/quickstart.css
+++ b/webui/src/styles/quickstart.css
@@ -37,6 +37,6 @@ details>summary {
 	cursor: pointer;
 }
 
-h1, h2, h3 {
-	margin-top: 0.4em;
+.accordion-button:not(.collapsed) {
+	background-color: #fff;
 }
