--- a/clients/python/templates/client.mustache
+++ b/clients/python/templates/client.mustache
@@ -1,3 +1,5 @@
+import warnings
+
 from urllib3.util import parse_url, Url
 
 import lakefs_client.apis
@@ -37,25 +39,6 @@ class LakeFSClient:
 {{/apis}}
 {{/apiInfo}}
 
-        # Backwards compatibility - keep the old names for now.
-        self.actions = actions_api.ActionsApi(self._api)
-        self.auth = auth_api.AuthApi(self._api)
-        self.branches = branches_api.BranchesApi(self._api)
-        self.commits = commits_api.CommitsApi(self._api)
-        self.config = config_api.ConfigApi(self._api)
-        self.experimental = experimental_api.ExperimentalApi(self._api)
-        self.health_check = health_check_api.HealthCheckApi(self._api)
-        self.metadata = metadata_api.MetadataApi(self._api)
-        self.objects = objects_api.ObjectsApi(self._api)
-        self.otf_diff = otf_diff_api.OtfDiffApi(self._api)
-        self.refs = refs_api.RefsApi(self._api)
-        self.repositories = repositories_api.RepositoriesApi(self._api)
-        self.retention = retention_api.RetentionApi(self._api)
-        self.staging = staging_api.StagingApi(self._api)
-        self.statistics = statistics_api.StatisticsApi(self._api)
-        self.tags = tags_api.TagsApi(self._api)
-        self.templates = templates_api.TemplatesApi(self._api)
-
     @staticmethod
     def _ensure_endpoint(configuration):
         """Normalize lakefs connection endpoint found in configuration's host"""
@@ -76,3 +59,88 @@ class LakeFSClient:
         except ValueError:
             pass
         return configuration
+
+    @property
+    def actions(self):
+        warnings.warn("Deprecated property. Use actions_api instead.", DeprecationWarning)
+        return self.actions_api
+
+    @property
+    def auth(self):
+        warnings.warn("Deprecated property. Use auth_api instead.", DeprecationWarning)
+        return self.auth_api
+
+    @property
+    def branches(self):
+        warnings.warn("Deprecated property. Use branches_api instead.", DeprecationWarning)
+        return self.branches_api
+
+    @property
+    def commits(self):
+        warnings.warn("Deprecated property. Use commits_api instead.", DeprecationWarning)
+        return self.commits_api
+
+    @property
+    def config(self):
+        warnings.warn("Deprecated property. Use config_api instead.", DeprecationWarning)
+        return self.config_api
+
+    @property
+    def experimental(self):
+        warnings.warn("Deprecated property. Use experimental_api instead.", DeprecationWarning)
+        return self.experimental_api
+
+    @property
+    def health_check(self):
+        warnings.warn("Deprecated property. Use health_check_api instead.", DeprecationWarning)
+        return self.health_check_api
+
+    @property
+    def metadata(self):
+        warnings.warn("Deprecated property. Use metadata_api instead.", DeprecationWarning)
+        return self.metadata_api
+
+    @property
+    def objects(self):
+        warnings.warn("Deprecated property. Use objects_api instead.", DeprecationWarning)
+        return self.objects_api
+
+    @property
+    def otf_diff(self):
+        warnings.warn("Deprecated property. Use otf_diff_api instead.", DeprecationWarning)
+        return self.otf_diff_api
+
+    @property
+    def refs(self):
+        warnings.warn("Deprecated property. Use refs_api instead.", DeprecationWarning)
+        return self.refs_api
+
+    @property
+    def repositories(self):
+        warnings.warn("Deprecated property. Use repositories_api instead.", DeprecationWarning)
+        return self.repositories_api
+
+    @property
+    def retention(self):
+        warnings.warn("Deprecated property. Use retention_api instead.", DeprecationWarning)
+        return self.retention_api
+
+    @property
+    def staging(self):
+        warnings.warn("Deprecated property. Use staging_api instead.", DeprecationWarning)
+        return self.staging_api
+
+    @property
+    def statistics(self):
+        warnings.warn("Deprecated property. Use statistics_api instead.", DeprecationWarning)
+        return self.statistics_api
+
+    @property
+    def tags(self):
+        warnings.warn("Deprecated property. Use tags_api instead.", DeprecationWarning)
+        return self.tags_api
+
+    @property
+    def templates(self):
+        warnings.warn("Deprecated property. Use templates_api instead.", DeprecationWarning)
+        return self.templates_api
