--- a/pkg/samplerepo/assets/sample/README.md.tmpl
+++ b/pkg/samplerepo/assets/sample/README.md.tmpl
@@ -31,7 +31,7 @@ If you're running lakeFS with Docker then all the tools you need (`lakectl`) are
 docker run --name lakefs --pull always \
              --rm --publish 8000:8000 \
              treeverse/lakefs:latest \
-             run --local-settings
+             run --quickstart
 ```
 
 Configure `lakectl` by running the following in a new terminal window: 
@@ -633,7 +633,7 @@ Alternatively you might want to have a look at [lakeFS Cloud](https://lakefs.clo
 
 ## lakeFS Samples
 
-The [lakeFS Samples](https://github.com/treeverse/lakeFS-samples) GitHub repository includes some excellent examples including.
+The [lakeFS Samples](https://github.com/treeverse/lakeFS-samples) GitHub repository includes some excellent examples including:
 
 * How to implement multi-table transaction on multiple Delta Tables
 * Notebooks to show integration of lakeFS with Spark, Python, Delta Lake, Airflow and Hooks.
