--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -114,7 +114,7 @@ layout: table_wrappers
                 });
             </script>
 
-            {% include nav.html pages=site.html_pages %}
+            {% include_cached nav.html pages=site.html_pages %}
             <div class="mobile-menu">
                 {% include header_menu.html %}
             </div>
