--- a/clients/python/templates/setup.mustache
+++ b/clients/python/templates/setup.mustache
@@ -14,19 +14,12 @@ VERSION = "{{packageVersion}}"
 # prerequisite: setuptools
 # http://pypi.python.org/pypi/setuptools
 
+PYTHON_REQUIRES = ">=3.7"
 REQUIRES = [
-  "urllib3 >= 1.25.3",
-  "python-dateutil",
-{{#asyncio}}
-  "aiohttp >= 3.0.0",
-{{/asyncio}}
-{{#tornado}}
-  "tornado>=4.2,<5",
-{{/tornado}}
-{{#hasHttpSignatureMethods}}
-  "pem>=19.3.0",
-  "pycryptodome>=3.9.0",
-{{/hasHttpSignatureMethods}}
+    "urllib3 >= 1.25.3, < 2.1.0",
+    "python-dateutil",
+    "pydantic >= 1.10.5, < 2",
+    "aenum"
 ]
 
 with open('README.md') as f:
