--- a/clients/python/templates/client.mustache
+++ b/clients/python/templates/client.mustache
@@ -14,9 +14,9 @@ class _WrappedApiClient(ApiClient):
 
     def files_parameters(self, files=None):
         """
-        Transforms input file data into a formatted list and combines it with superclass file parameters.
-        In case file_name is a string we assume that it is a path to the file that needs to be read.
-        In case file_name is bytes we assume that it is a file-like object that we append the information.
+        Transforms input file data into a formatted list to return file_parameters.
+        Assume a string file_name is a path to the file to read.
+        Assume a bytes file_name is a file-like object that we append the information.
         The parent class will handle the files to read.
         """
         if not files:
