--- a/docs/_includes/swagger.html
+++ b/docs/_includes/swagger.html
@@ -1,6 +1,6 @@
 <div id="swagger-ui"></div>
 
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.26.2/swagger-ui.min.css"/>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.26.2/swagger-ui-bundle.min.js" integrity="Zo9G014Djs2TRCvJGBpi0vdualARLlj1a4JNk2MyvtdrALB8R0ndaV+tewjLU2uJ" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.26.2/swagger-ui-standalone-preset.min.js" integrity="DH0sNxIPgt9e1Nzmh5vVgyzsBd4eZAkwiec4LIqQz+sn+RkyQ9VUaZS9LvCdYl3s" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/5.9.1/swagger-ui.min.css" integrity="sha512-wjyFPe3jl9Y/d+vaEDd04b2+wzgLdgKPVoy9m1FYNpJSMHM328G50WPU57xayVkZwxWi45vA+4QN+9erPZIeig==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/5.9.1/swagger-ui-bundle.min.js" integrity="sha512-ZltHb61aGRLllftCEx5iAhQBNmqa12g2MB9lpmoRl17c4kV5cBvVJ3LiK6nYx98hzHmrV7bE80FPP+IIi08Odw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/5.9.1/swagger-ui-standalone-preset.min.js" integrity="sha512-qwGi7EG31HcylzamsmacHLZJrfUGRuuHEaCMcOojuNpMu+paR554VjaCZ9LdUVTrmF8xC03YVqTzuKx0SDdruA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="{{ site.baseurl }}/assets/js/swagger-ui-lakefs.js"></script>
