fix broken links in pypi?

--- a/clients/python/templates/setup.mustache
+++ b/clients/python/templates/setup.mustache
@@ -23,7 +23,9 @@ REQUIRES = [
 ]
 
 with open('README.md') as f:
-    long_description = f.read()
+    import re
+    long_description = re.sub(r'(\[\*\*[a-z_]*\*\*\]\()docs/',
+                              r'\1https://github.com/treeverse/lakeFS/tree/master/docs/', f.read())
 
 setup(
     name=NAME,
