--- a/clients/python/templates/setup.mustache
+++ b/clients/python/templates/setup.mustache
@@ -25,8 +25,11 @@ REQUIRES = [
 with open('README.md') as f:
     import re
     # replace relative links to docs with github links:
+    ref = "master"
+    if re.match('^[0-9]+\.[0-9]+\.[0-9]+$', VERSION):
+        ref = "v" + VERSION
     long_description = re.sub(r'(\[\*\*[a-z_]*\*\*]\()docs/',
-                              r'\1https://github.com/treeverse/lakeFS/tree/master/clients/python/docs/', f.read())
+                              rf'\1https://github.com/treeverse/lakeFS/tree/{ref}/clients/python/docs/', f.read())
 
 setup(
     name=NAME,
