--- a/clients/python-legacy/templates/setup.mustache
+++ b/clients/python-legacy/templates/setup.mustache
@@ -31,12 +31,11 @@ REQUIRES = [
 
 with open('README.md') as f:
     import re
-    # replace relative links to docs with github links:
-    ref = "master"
-    if re.match('^[0-9]+\.[0-9]+\.[0-9]+$', VERSION):
-        ref = "v" + VERSION
-    long_description = re.sub(r'(\[\*\*[a-z_]*\*\*]\()docs/',
-                              rf'\1https://github.com/treeverse/lakeFS/tree/{ref}/clients/python/docs/', f.read())
+    # replace relative links with links to the docs:
+    doc_version = '.'.join(f'v{VERSION}'.split('.')[:-1])
+    long_description = re.sub(r'(\[[*a-zA-Z_]*]\()docs/',
+                              rf'\1https://github.com/treeverse/lakeFS/tree/{doc_version}/clients/python/docs/',
+                              f.read())
 
 setup(
     name=NAME,
