Upgrade version of `oapi-codegen`
To get the latest features and bug fixes, we should bump to the latest
version of the library.

--- a/pkg/api/tmpl/inline.tmpl
+++ b/pkg/api/tmpl/inline.tmpl
@@ -2,7 +2,7 @@
 
 // Base64 encoded, gzipped, json marshaled Swagger object
 var swaggerSpec = []string{
-{{range .}}
+{{range .SpecParts}}
     "{{.}}",{{end}}
 }
 
