[Docs] Improve consent visibility

--- a/docs/_includes/head_custom.html
+++ b/docs/_includes/head_custom.html
@@ -21,5 +21,5 @@
 </script>
 <script src="{{ site.baseurl }}/assets/js/feedback.js"></script>
 <link href="https://data-folks.masto.host/@lakeFS" rel="me">
-<script defer src="{{ site.baseurl }}/assets/js/cookieconsent.js"></script>
-<script defer src="{{ site.baseurl }}/assets/js/cookieconsent-init.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v3.0.0/dist/cookieconsent.css">
+<script type="module" defer src="{{ site.baseurl }}/assets/js/cookieconsent-init.js"></script>
