change script load order

--- a/docs/_includes/head_custom.html
+++ b/docs/_includes/head_custom.html
@@ -14,6 +14,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/themes/smoothness/jquery-ui.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+<script type="module" src="{{ site.baseurl }}/assets/js/cookieconsent-init.js"></script>
 <script src="{{ site.baseurl }}/assets/js/copy-code.js"></script>
 <script>
     $(function () {
@@ -22,4 +23,3 @@
 </script>
 <script src="{{ site.baseurl }}/assets/js/feedback.js"></script>
 <link href="https://data-folks.masto.host/@lakeFS" rel="me">
-<script type="module" defer src="{{ site.baseurl }}/assets/js/cookieconsent-init.js"></script>
