Add back removed script tag

--- a/docs/_includes/mermaid_setup.html
+++ b/docs/_includes/mermaid_setup.html
@@ -1,3 +1,4 @@
+<script src="https://unpkg.com/mermaid@9.3.0/dist/mermaid.min.js"></script>
 <script>
     $(document).ready(function () {
         mermaid.initialize({
