Fix middleware and some changes to accessing the changed Go APIs
Includes 7e0c91c6e73bb563dcb743e34f82fd5ed6da7528, thanks
@Jonathan-Rosenberg!

--- a/pkg/api/tmpl/chi/chi-middleware.tmpl
+++ b/pkg/api/tmpl/chi/chi-middleware.tmpl
@@ -4,6 +4,7 @@
 type ServerInterfaceWrapper struct {
     Handler ServerInterface
     HandlerMiddlewares []MiddlewareFunc
+    ErrorHandlerFunc   func(w http.ResponseWriter, r *http.Request, err error)
 }
 
 type MiddlewareFunc func(http.HandlerFunc) http.HandlerFunc
